# aoc2019

./: Cargo.toml
benches/: day_12_benchmark.rs
inputs/: day_01_test.result  day_01_test_3.result  day_02.result  day_03.result  day_04.result  day_05.result  day_06.result  day_07.result  day_09.result  day_12.result
src/: aoc_error.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  interface.rs  lib.rs  main.rs  utils.rs
src/year2019/: calendar.rs  configuration.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  intcode_computer.rs  mod.rs
tests/: calendar_2019_test.rs
