[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Radek Stibora <rstibora@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "aoc_framework"
path = "src/lib.rs"

[[bin]]
name = "aoc_runner"
path = "src/main.rs"
